# InsightCast

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  build_backend.py  pyproject.toml
docs/superpowers/plans/: 2026-06-06-insight-cast-mvp.md  2026-06-06-real-youtube-e2e-validation.md  2026-06-07-agent-analysis-cli.md  2026-06-07-output-cache-and-subtitle-layout.md  2026-06-07-video-centric-output-structure.md  2026-06-14-adaptive-subtitle-translation-retries.md  2026-06-14-batched-subtitle-translation.md  2026-06-14-curator-candidate-duration-normalization.md  2026-06-14-retry-unreadable-subtitle-translations.md  2026-06-15-task-progress-console-logging.md  2026-06-15-two-stage-topic-curation-and-metadata.md  2026-06-17-windowed-candidate-boundary-selection.md  2026-06-19-resumable-analyze-render-pipeline.md  2026-06-22-cli-api-client-boundary.md
docs/superpowers/specs/: 2026-06-06-insight-cast-mvp-design.md  2026-06-06-real-youtube-e2e-validation-design.md  2026-06-07-agent-analysis-cli-design.md  2026-06-07-output-cache-and-subtitle-layout-design.md  2026-06-07-video-centric-output-structure-design.md  2026-06-14-batched-subtitle-translation-design.md  2026-06-14-curator-candidate-duration-normalization-design.md  2026-06-15-task-progress-console-logging-design.md  2026-06-15-two-stage-topic-curation-and-metadata-design.md  (+3 more)
src/insightcast/: __init__.py
tests/: test_repository_contract.py
tests/acceptance/: test_video_output_lifecycle.py
tests/api/: test_analysis_jobs.py  test_direct_render_jobs.py  test_health.py  test_openapi.py  test_videos.py
tests/service/: test_job_service.py  test_queue_worker.py
tests/unit/: test_analyze_cli.py  test_api_client.py  test_cache_cli.py  test_clip_engine.py  test_config.py  test_curator_engine.py  test_domain_models.py  test_ffmpeg_client.py  test_file_job_writer.py  test_files.py  test_lingo_engine.py  test_manifests.py  test_metadata_cli.py  test_openai_client.py  test_prompts.py  test_publish_engine.py  test_render_cli.py  test_render_validator.py  test_source_cache.py  test_source_engine.py  test_stage_models.py  test_stage_store.py  test_subtitles.py  test_timecode.py  test_transcription.py  test_video_store.py  test_youtube.py  test_ytdlp_client.py
(+59 files in other folders)
