[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insight-cast"
version = "0.1.0"
description = "Local-first AI knowledge curation for long-form YouTube videos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "openai>=1.68,<3",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.8,<3",
  "pysubs2>=1.8,<2",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.34,<1",
  "yt-dlp>=2025.3.26",
]

[project.optional-dependencies]
local-whisper = [
  "faster-whisper>=1.1,<2",
]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.11,<1",
]

[project.scripts]
cast_api = "insightcast.api.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/insightcast"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

